// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CompletionProviderStatus errored unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori--completion-provider-status--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      <div>
        <p>
          completionProviderMajorOutage
        </p>
        <p>
          <a
            href="https://status.anthropic.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            completionProviderCheckStatusPage
          </a>
        </p>
      </div>
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders CompletionProviderStatus errored with provider specified unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori--completion-provider-status--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      <div>
        <p>
          completionProviderMajorOutage
        </p>
        <p>
          <a
            href="https://status.openai.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            completionProviderCheckStatusPage
          </a>
        </p>
      </div>
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders CompletionProviderStatus unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori--completion-provider-status--tooltip"
  >
    <div
      class="memori-tooltip--content"
    >
      <div>
        <p>
          completionProviderMajorOutage
        </p>
        <p>
          <a
            href="https://status.anthropic.com/"
            rel="noopener noreferrer"
            target="_blank"
          >
            completionProviderCheckStatusPage
          </a>
        </p>
      </div>
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      <svg
        class="lucide lucide-triangle-alert memori--completion-provider-status--icon memori--completion-provider-status--icon-error"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
        />
        <path
          d="M12 9v4"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`renders CompletionProviderStatus with provider specified unchanged 1`] = `<div />`;
